tests/baselines/reference/readonlyReadonly.errors.txt
readonlyReadonly.ts(2,14): error TS1030: 'readonly' modifier already seen.
readonlyReadonly.ts(3,26): error TS1030: 'readonly' modifier already seen.


==== readonlyReadonly.ts (2 errors) ====
    class C {
        readonly readonly x: number;
                 ~~~~~~~~
!!! error TS1030: 'readonly' modifier already seen.
        constructor(readonly readonly y: number) {}
                             ~~~~~~~~
!!! error TS1030: 'readonly' modifier already seen.
    }